# sorty

./: .gitignore  README.md  pyproject.toml  run.py
backend/: pyproject.toml  run.py
backend/sorty/: __init__.py  annotate.py  api.py  classes.py  classify.py  config.py  generate.py  ids.py  jobs.py  media.py  recyclebin.py  refresh.py  summary.py  workspace.py
backend/sorty/core/: __init__.py  classify.py  clean.py  download.py  ids.py  images.py  models.py  paths.py  pipeline.py  progress.py  resolver.py  sources.py  store.py
backend/tests/: conftest.py  test_annotate.py  test_api.py  test_classes.py  test_classify_infer.py  test_clean.py  test_crossval_wrapper.py  test_generate.py  test_jobs.py  test_media.py  test_pagination.py  test_recyclebin.py  test_store.py  test_summary.py  test_workspace.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  activeJobs.ts  api.ts  boxcolor.ts  classname.ts  config.ts  format.ts  index.css  settings.ts  status.ts  types.ts
frontend/src/components/: AddClassesDialog.tsx  AddImagesDialog.tsx  AnnotateDialog.tsx  BoxOverlay.tsx  ClassEditor.tsx  ConfirmModal.tsx  CreateSplitsDialog.tsx  DatasetToolsPanel.tsx  DeleteSourceDialog.tsx  Dropdown.tsx  Expandable.tsx  ExportDatasetDialog.tsx  FilterSidebar.tsx  GenerateClassesDialog.tsx  GenerateDialog.tsx  Header.tsx  ImageCard.tsx  JobProgress.tsx  MLToolsPanel.tsx  Mascot.tsx  MismatchPanel.tsx  Modal.tsx  ModelExportDialog.tsx  NewDatasetDialog.tsx  RenameDialog.tsx  Segmented.tsx  Select.tsx  SelectionPanel.tsx  SettingsDialog.tsx  StatusChip.tsx  SummaryPanel.tsx  ThemeToggle.tsx  TrainDialog.tsx  TrainingPanel.tsx  icons.tsx
frontend/src/hooks/: useConfirm.tsx  useJob.ts
frontend/src/pages/: BinPage.tsx  DatasetPage.tsx  Home.tsx
frontend/src/stores/: dataset.ts
src/sorty/: __init__.py  __main__.py  annotate.py  app.py  classify.py  generate.py  ids.py  recyclebin.py  state.py  tasks.py  theme.py  workspace.py
tests/: conftest.py  test_annotate.py  test_crossval_wrapper.py  test_generate.py  test_media.py  test_workspace.py
