[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorty"
version = "0.1.0"
description = "A friendly local GUI for generating and cleaning image datasets with prompt2dataset."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Cat Pereira", email = "catpereiradev@gmail.com" },
]
dependencies = [
    "nicegui>=3.14",
    "prompt2dataset>=0.2.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
train = ["prompt2dataset[train]>=0.2.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
sorty = "sorty.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sorty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
