[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorty"
version = "0.2.0"
description = "A local FastAPI backend for building and cleaning image classification datasets."
readme = "../README.md"
requires-python = ">=3.11"
authors = [
    { name = "Cat Pereira", email = "catpereiradev@gmail.com" },
]
# torch is a base dependency so training and the classifier always work. CPU torch
# installs from PyPI. For a CUDA build, install torch from
# --index-url https://download.pytorch.org/whl/cu126 first
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "Send2Trash>=1.8.0",
    "scikit-learn>=1.3.0",
    "torch-lr-finder>=0.2.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["sorty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
